[package]
name = "dx"
version = "0.1.0"
authors = ["Kevin Du <kkxandeer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = "2.33.0"
rust-embed = "5.5.1"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "serve"]
